# Traffic-statistics

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Finetuning/: Traffic.ipynb
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: dashboard.tsx  traffic-stats.tsx  vehicle-stats.tsx  video-stream.tsx
frontend/utils/: WebSocketService.ts
